feat: added functionality to split the bill on application

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
             android:name=".view.MemberActivity"
             android:exported="false" />
         <activity
+            android:name=".view.SplitBillActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
